// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8143564,
  "ahorro_mensual_cop": 678631,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.26,
  "roi_porcentaje": 1031.08,
  "tir": 26.42,
  "vpn": 70508278,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 332866730,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 7736386,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 407178,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 8122543,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 427502,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8143564,
  "ahorro_mensual_cop": 678631,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.3,
  "roi_porcentaje": 3110.76,
  "tir": 34.11,
  "vpn": 69011102,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 322909187,
  "year0_flujo": -10725169,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 0,
    "flujo_neto_cop": 739798,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 407178,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 0,
    "flujo_neto_cop": 1125955,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 427502,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8160000,
  "ahorro_mensual_cop": 680000,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.99,
  "roi_porcentaje": 865.44,
  "tir": 22.77,
  "vpn": 63832146,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 327229904,
  "year0_flujo": -42750566,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 7752000,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 408000,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 0,
    "flujo_neto_cop": 8139600,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 428400,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8160000,
  "ahorro_mensual_cop": 680000,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 6.19,
  "roi_porcentaje": 2558.62,
  "tir": 27.47,
  "vpn": 62041804,
}
`;

exports[`golden masters: connection mode x battery x financing > autoconsumo | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 315322641,
  "year0_flujo": -12825169,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 0,
    "flujo_neto_cop": -614532,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 408000,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 0,
    "flujo_neto_cop": -226932,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 428400,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8350518,
  "ahorro_mensual_cop": 695877,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.16,
  "roi_porcentaje": 1052.33,
  "tir": 26.95,
  "vpn": 72864889,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 340462820,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 206954,
    "flujo_neto_cop": 7932992,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 417526,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 214312,
    "flujo_neto_cop": 8326140,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438218,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8350518,
  "ahorro_mensual_cop": 695877,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.19,
  "roi_porcentaje": 3181.59,
  "tir": 35.17,
  "vpn": 71367713,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 330505277,
  "year0_flujo": -10725169,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 206954,
    "flujo_neto_cop": 936404,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 417526,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 214312,
    "flujo_neto_cop": 1329552,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438218,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8361153,
  "ahorro_mensual_cop": 696763,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.89,
  "roi_porcentaje": 882.08,
  "tir": 23.2,
  "vpn": 66074451,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 334344873,
  "year0_flujo": -42750566,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 201153,
    "flujo_neto_cop": 7943095,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 418058,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 207975,
    "flujo_neto_cop": 8337176,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438799,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8361153,
  "ahorro_mensual_cop": 696763,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 6.06,
  "roi_porcentaje": 2614.1,
  "tir": 28.22,
  "vpn": 64284109,
}
`;

exports[`golden masters: connection mode x battery x financing > net_billing | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 322437610,
  "year0_flujo": -12825169,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 201153,
    "flujo_neto_cop": -423437,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 418058,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 207975,
    "flujo_neto_cop": -29356,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 438799,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.01,
  "roi_porcentaje": 1091.28,
  "tir": 27.93,
  "vpn": 77185343,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=false > table 1`] = `
{
  "final_acumulado": 354388984,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 8293436,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 8699400,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.99,
  "roi_porcentaje": 3311.43,
  "tir": 37.16,
  "vpn": 75688167,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=false | financiado=true > table 1`] = `
{
  "final_acumulado": 344431441,
  "year0_flujo": -10725169,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 1296848,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 6996588,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 1702812,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=false > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 4.7,
  "roi_porcentaje": 912.6,
  "tir": 24,
  "vpn": 70185343,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=false > table 1`] = `
{
  "final_acumulado": 347388984,
  "year0_flujo": -42750566,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 569933,
    "flujo_neto_cop": 8293436,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 589263,
    "flujo_neto_cop": 8699400,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=true > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": {
    "capacidad_nominal_kwh": 10,
    "capacidad_util_kwh": 9,
    "costo_cop": 7000000,
    "horas_autonomia": 48,
  },
  "costo_total_cop": 42750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 5.85,
  "roi_porcentaje": 2715.81,
  "tir": 29.64,
  "vpn": 68395001,
}
`;

exports[`golden masters: connection mode x battery x financing > net_metering | bateria=true | financiado=true > table 1`] = `
{
  "final_acumulado": 335481721,
  "year0_flujo": -12825169,
  "year1": {
    "ahorro_cop": 8160000,
    "anio": 1,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 569933,
    "flujo_neto_cop": -73096,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8568000,
    "anio": 2,
    "cuota_financiamiento_cop": 8366532,
    "excedentes_cop": 589263,
    "flujo_neto_cop": 332868,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > ambos beneficios > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 2.37,
  "roi_porcentaje": 1141.17,
  "tir": 36.74,
  "vpn": 91953074,
}
`;

exports[`golden masters: tax benefit toggles > ambos beneficios > table 1`] = `
{
  "final_acumulado": 372222502,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 12191473,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 18736845,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > solo deduccion renta > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 3,
  "roi_porcentaje": 1141.17,
  "tir": 33.42,
  "vpn": 89444758,
}
`;

exports[`golden masters: tax benefit toggles > solo deduccion renta > table 1`] = `
{
  "final_acumulado": 372222502,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 9462847,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 16008219,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;

exports[`golden masters: tax benefit toggles > solo depreciacion > headline 1`] = `
{
  "ahorro_anual_cop": 8729934,
  "ahorro_mensual_cop": 727495,
  "bateria": null,
  "costo_total_cop": 35750566,
  "generacion_anual_kwh": 10271,
  "kwp": 8.61,
  "numero_paneles": 14,
  "payback_anios": 2.84,
  "roi_porcentaje": 1123.99,
  "tir": 33.42,
  "vpn": 86879183,
}
`;

exports[`golden masters: tax benefit toggles > solo depreciacion > table 1`] = `
{
  "final_acumulado": 366083094,
  "year0_flujo": -35750566,
  "year1": {
    "ahorro_cop": 8143564,
    "anio": 1,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 586369,
    "flujo_neto_cop": 12191473,
    "generacion_kwh": 10271,
    "mantenimiento_cop": 436497,
  },
  "year2": {
    "ahorro_cop": 8550045,
    "anio": 2,
    "cuota_financiamiento_cop": 0,
    "excedentes_cop": 607218,
    "flujo_neto_cop": 12597437,
    "generacion_kwh": 10260,
    "mantenimiento_cop": 457863,
  },
}
`;
